--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-14	Arie van Deursen
+	* Version 5.3.0
+	* Mostly cleaned some github-related items.
+
 2012-07-12	Arie van Deursen
 	* Version 5.2.9
 	* First version distributed via github.
